Use Byte.valueOf instead of constructor